components/ua/user-establishment-details/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-establishment-details
spec:
  template:
    spec:
      containers:
        - name: user-establishment-details
          image: ghcr.io/isisbusapps/user-establishment-details@sha256:bfb62cae72b4d1fb34e3afd59e4b61589c73bfa478304c0a88e7dd080ae3c958
