components/ua/user-establishment-details/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-establishment-details
spec:
  template:
    spec:
      containers:
        - name: user-establishment-details
          image: ghcr.io/isisbusapps/user-establishment-details@sha256:7ccd693e9500e104213cf81fc81cabd2ff38b5dfd9dc170a00803aa85f7aa88f
