components/ua/user-establishment-details/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-establishment-details
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /UserEstablishmentDetails
    backendRefs:
    - name: user-establishment-details
      port: 8080
